# up-cli

./: Cargo.toml  README.md
src/: main.rs  model.rs  tally_income.rs  up.rs
