[package]
name = "up-cli"
version = "0.1.2"
authors = ["etopiei"]
edition = "2018"
license = "GPL-3.0-only"
description = "A CLI to interact with the Up Banking API"
repository = "https://github.com/etopiei/up-cli"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2"