[package]
name = "up-cli"
version = "0.2.0"
authors = ["etopiei"]
edition = "2018"
license = "GPL-3.0-only"
description = "A CLI to interact with the Up Banking API"
repository = "https://github.com/etopiei/up-cli"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
colored = "2"
